--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ body {
     margin: auto;
     padding-left: 24px;
     padding-right: 24px;
-   /* z-index: 1;*/
+    /* z-index: 1;*/
 }
 
 header {
@@ -57,7 +57,7 @@ header img {
 
 main {
     min-height: calc(100vh - 200px);
-    /*200px=100px Header und 100px Footer */   
+    /*200px=100px Header und 100px Footer */
 }
 
 .headline {
@@ -71,7 +71,7 @@ main {
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
-    gap: 32px;
+    gap: 36px;
     padding-bottom: 32px;
 }
 
@@ -79,10 +79,15 @@ main {
     /*max-width: 300px;  
     width: 100%;*/
     width: 180px;
-    height: 180px;  
+    height: 180px;
     object-fit: fill;
-    border-radius: 20px;   
+    border-radius: 20px;
 }
+
+/*.picture:hover {
+    width: 200px;
+    height: 200px;
+}*/
 
 footer {
     display: flex;
@@ -91,3 +96,16 @@ footer {
     width: 100%;
 }
 
+.footerRemark {
+    display: flex;
+    justify-content: center;
+}
+
+@media(max-width: 430px) {
+
+    header img {
+        max-width: 100%;
+        height: auto;
+    }
+
+}
