--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ body {
     /* z-index: 1;*/
 }
 
-header {
+.header {
     display: flex;
     width: 100%;
     height: 100px;
@@ -40,6 +40,7 @@ header {
     background-color: #0A222C;
     border-color: rgb(64, 59, 59);
     box-shadow: 0 5px 25px rgba(64, 59, 59, 0.35);
+
 }
 
 header img {
@@ -101,11 +102,54 @@ footer {
     justify-content: center;
 }
 
-@media(max-width: 430px) {
+/* Diese Klasse wird nur in der Impressum Seite verwendet */
 
+.contentWidthImpressum {
+    box-sizing: border-box;
+    max-width: var(--maxWidth);
+    width: 100%;
+    margin: auto;
+    padding-left: 24px;
+    padding-right: 24px;
+    /* z-index: 1;*/
+}
+
+.impressum {
+    background-color: aquamarine;
+    overflow-wrap: break-word;
+    word-wrap: break-word;
+}
+
+.head {
+    padding-left: 20px;
+    padding-right: 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: relative;
+    overflow: hidden;
+}
+
+.head a {
+    text-decoration: none;
+    color: white;
+}
+
+@media(max-width: 560px) {
+    .impressum {
+        font-size: smaller;
+    }
+}
+
+@media(max-width: 480px) {
+    .impressum {
+        font-size: xx-small;
+    }
+}
+
+@media(max-width: 430px) {
     header img {
         max-width: 100%;
         height: auto;
     }
-
 }
