--- a/style.css
+++ b/style.css
@@ -97,6 +97,10 @@ footer {
     width: 100%;
 }
 
+footer img {
+    height: 72px;
+}
+
 .footerRemark {
     display: flex;
     justify-content: center;
@@ -115,7 +119,6 @@ footer {
 }
 
 .impressum {
-    background-color: aquamarine;
     overflow-wrap: break-word;
     word-wrap: break-word;
 }
@@ -148,7 +151,7 @@ footer {
 }
 
 @media(max-width: 430px) {
-    header img {
+    header img, footer img {
         max-width: 100%;
         height: auto;
     }
