--- a/style.css
+++ b/style.css
@@ -1,6 +1,10 @@
 :root {
-    --maxWidth: 1440px;
     /* Variable für Breite für Content Begrenzung */
+    --maxWidth: 1440px;
+    /* Variablen für Farben */
+    --backgroundColorHeaderFooter: #1232a6;
+    --backgroundColorAOT: rgb(201, 190, 89);
+    --borderColor: rgba(255, 0, 0, 0.477);
 }
 
 * {
@@ -14,7 +18,7 @@ html {
 }
 
 body {
-    margin: 0;
+    /*margin: 0;*/
     font-family: Arial, Helvetica, sans-serif;
     font-size: 24px;
     display: flex;
@@ -37,10 +41,8 @@ body {
     width: 100%;
     height: 100px;
     border-bottom: solid;
-    background-color: #0A222C;
-    border-color: rgb(64, 59, 59);
-    box-shadow: 0 5px 25px rgba(64, 59, 59, 0.35);
-
+    background-color: var(--backgroundColorHeaderFooter);
+    border-color: var(--borderColor);
 }
 
 header img {
@@ -49,11 +51,7 @@ header img {
 
 .aot {
     width: 100%;
-    background-color: khaki;
-    /*background-image: url(./assets/img/background.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: left bottom;*/
+    background-color: var(--backgroundColorAOT);
 }
 
 main {
@@ -81,7 +79,7 @@ main {
     width: 100%;*/
     width: 180px;
     height: 180px;
-    object-fit: fill;
+    object-fit: cover;
     border-radius: 20px;
 }
 
@@ -92,18 +90,26 @@ main {
 
 footer {
     display: flex;
-    background-color: #0A222C;
+    background-color: var(--backgroundColorHeaderFooter);
     height: 100px;
     width: 100%;
-}
-
-footer img {
-    height: 72px;
+    border-top: solid;
+    border-color: var(--borderColor);
 }
 
 .footerRemark {
+    color: white;
+    font-size: 16px;
+    padding-left: 40px;
+    padding-right: 40px;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.footerRemark a {
+    text-decoration: none;
+    color: white;
 }
 
 /* Diese Klasse wird nur in der Impressum Seite verwendet */
@@ -119,28 +125,70 @@ footer img {
 }
 
 .impressum {
+    padding-top: 32px;
+    padding-bottom: 32px;
     overflow-wrap: break-word;
     word-wrap: break-word;
 }
 
-.head {
-    padding-left: 20px;
-    padding-right: 20px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    position: relative;
-    overflow: hidden;
+footer img {
+    height: 72px;
 }
 
-.head a {
-    text-decoration: none;
-    color: white;
+/* Klassen für Overlay */
+
+.overlayClass {
+    position: absolute;
+    /* eventl. relativ */
+    top: 0;
+    left: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;   
+    width: 100%;
+    height: 100vh;
+    background-color: rgba(200, 200, 200, 0.85);
+    /*background-image: url(./assets/img/background.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: left bottom;
+    border-radius: 6px;*/
 }
+
+.d_none {
+    display: none;
+}
+
+.innerOverlay {
+    max-width: 1440px;
+    width: 100%;
+    height: auto;
+    background-color: rgba(11, 87, 102, 0.8);
+    color: crimson;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    font-size: 24px;
+    border-radius: 32px;
+}
+
+.pictureInOverlay {
+    max-width: 980px;
+    height: auto;
+    border-radius: 24px;
+    margin-top: 10px;
+    margin-bottom: 64px;
+}
+
 
 @media(max-width: 560px) {
     .impressum {
         font-size: smaller;
+    }
+
+    .footerRemark {
+        flex-direction: column;
+        gap: 16px;
     }
 }
 
@@ -151,8 +199,14 @@ footer img {
 }
 
 @media(max-width: 430px) {
-    header img, footer img {
+
+    header img,
+    footer img {
         max-width: 100%;
         height: auto;
+    }
+
+    h2 {
+        font-size: 16px;
     }
 }
