--- a/style.css
+++ b/style.css
@@ -13,6 +13,11 @@
     padding: 0;
 }
 
+h3 {
+    text-align: center;
+    color: black;
+}
+
 html {
     scroll-behavior: smooth;
 }
@@ -21,9 +26,9 @@ body {
     /*margin: 0;*/
     font-family: Arial, Helvetica, sans-serif;
     font-size: 24px;
-    display: flex;
+    /*display: flex;
     flex-direction: column;
-    align-items: center;
+    /*align-items: center;*/
 }
 
 .contentWidth {
@@ -60,18 +65,22 @@ main {
 }
 
 .headline {
+    /*background-color: blue;*/
+    width: 100%;
     text-align: center;
-    padding-top: 32px;
-    padding-bottom: 32px;
+    padding-top: 24px;
+    padding-bottom: 24px;
 }
 
 .pictureplace {
+    /*background-color: blueviolet;*/
     display: flex;
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
-    gap: 36px;
-    padding-bottom: 32px;
+    gap: 32px;
+    padding-top: 24px;
+    padding-bottom: 24px;
 }
 
 .picture {
@@ -138,16 +147,16 @@ footer img {
 /* Klassen für Overlay */
 
 .overlayClass {
-    position: absolute;
+    position: relative;
     /* eventl. relativ */
     top: 0;
     left: 0;
     display: flex;
     justify-content: center;
-    align-items: center;   
-    width: 100%;
-    height: 100vh;
-    background-color: rgba(200, 200, 200, 0.85);
+    align-items: center;
+    min-height: calc(100vh - 200px);  
+    width: 100%;    
+    /*background-color: rgba(160, 185, 234, 0.85);
     /*background-image: url(./assets/img/background.jpg);
     background-size: cover;
     background-repeat: no-repeat;
@@ -163,11 +172,11 @@ footer img {
     max-width: 1440px;
     width: 100%;
     height: auto;
-    background-color: rgba(11, 87, 102, 0.8);
-    color: crimson;
+    /*background-color: rgba(11, 87, 102, 0.8);*/
     display: flex;
-    justify-content: space-evenly;
+    justify-content: center;
     align-items: center;
+    gap: 16px;
     font-size: 24px;
     border-radius: 32px;
 }
