--- a/style.css
+++ b/style.css
@@ -1,10 +1,12 @@
 :root {
     /* Variable für Breite für Content Begrenzung */
     --maxWidth: 1440px;
+
     /* Variablen für Farben */
     --backgroundColorHeaderFooter: #1232a6;
     --backgroundColorAOT: rgb(201, 190, 89);
-    --borderColor: rgba(255, 0, 0, 0.477);
+    --borderColorHeaderFooter: rgba(255, 0, 0, 0.477);
+    --backgroundColorOverlay: lightsteelblue;
 }
 
 * {
@@ -23,12 +25,8 @@ html {
 }
 
 body {
-    /*margin: 0;*/
     font-family: Arial, Helvetica, sans-serif;
     font-size: 24px;
-    /*display: flex;
-    flex-direction: column;
-    /*align-items: center;*/
 }
 
 .contentWidth {
@@ -38,7 +36,6 @@ body {
     margin: auto;
     padding-left: 24px;
     padding-right: 24px;
-    /* z-index: 1;*/
 }
 
 .header {
@@ -47,7 +44,7 @@ body {
     height: 100px;
     border-bottom: solid;
     background-color: var(--backgroundColorHeaderFooter);
-    border-color: var(--borderColor);
+    border-color: var(--borderColorHeaderFooter);
 }
 
 header img {
@@ -65,7 +62,6 @@ main {
 }
 
 .headline {
-    /*background-color: blue;*/
     width: 100%;
     text-align: center;
     padding-top: 24px;
@@ -73,7 +69,6 @@ main {
 }
 
 .pictureplace {
-    /*background-color: blueviolet;*/
     display: flex;
     justify-content: center;
     align-items: center;
@@ -84,18 +79,16 @@ main {
 }
 
 .picture {
-    /*max-width: 300px;  
-    width: 100%;*/
     width: 180px;
     height: 180px;
     object-fit: cover;
     border-radius: 20px;
 }
 
-/*.picture:hover {
-    width: 200px;
-    height: 200px;
-}*/
+.picture:hover {
+    border: 4px solid darkred;
+    cursor: pointer;
+}
 
 footer {
     display: flex;
@@ -103,7 +96,7 @@ footer {
     height: 100px;
     width: 100%;
     border-top: solid;
-    border-color: var(--borderColor);
+    border-color: var(--borderColorHeaderFooter);
 }
 
 .footerRemark {
@@ -121,7 +114,55 @@ footer {
     color: white;
 }
 
-/* Diese Klasse wird nur in der Impressum Seite verwendet */
+/* Klassen für Overlay */
+
+.overlayClass {
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    width: 100%;
+    background-color: var(--backgroundColorOverlay);
+}
+
+.d_none {
+    display: none;
+}
+
+.innerOverlay {
+    max-width: var(--maxWidth);
+    width: 100%;
+    max-height: 100vh;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 16px;
+    font-size: 24px;
+    border-radius: 32px;
+    padding-left: 16px;
+    padding-right: 16px;
+}
+
+.pictureInOverlay {
+    max-width: 1200px;
+    width: 100%;
+    height: auto;
+    border-radius: 24px;
+    border-style: solid;
+    border-color: rgba(0, 0, 0, 0.484);
+    cursor: pointer;
+}
+
+.arrow {
+    width: 60px;
+    cursor: pointer;
+}
+
+/* Diese Klassen werden nur in der Impressum Seite verwendet */
 
 .contentWidthImpressum {
     box-sizing: border-box;
@@ -130,7 +171,6 @@ footer {
     margin: auto;
     padding-left: 24px;
     padding-right: 24px;
-    /* z-index: 1;*/
 }
 
 .impressum {
@@ -144,58 +184,6 @@ footer img {
     height: 72px;
 }
 
-/* Klassen für Overlay */
-
-.overlayClass {
-    position: relative;
-    /* eventl. relativ */
-    top: 0;
-    left: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: calc(100vh - 200px);  
-    width: 100%;    
-    /*background-color: rgba(160, 185, 234, 0.85);
-    /*background-image: url(./assets/img/background.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: left bottom;
-    border-radius: 6px;*/
-}
-
-.d_none {
-    display: none;
-}
-
-.innerOverlay {
-    max-width: 1440px;
-    width: 100%;
-    height: auto;
-    /*background-color: rgba(11, 87, 102, 0.8);*/
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 16px;
-    font-size: 24px;
-    border-radius: 32px;
-}
-
-.pictureInOverlay {
-    max-width: 1000px;
-    height: auto;
-    border-radius: 24px;
-    border-style: solid;
-    border-color: rgba(0, 0, 0, 0.484);
-    /*margin-top: 10px;
-    margin-bottom: 64px;*/
-}
-
-.arrow { 
-    width: 60px;
-    cursor: pointer;
-   }
-
 
 @media(max-width: 560px) {
     .impressum {
@@ -206,11 +194,26 @@ footer img {
         flex-direction: column;
         gap: 16px;
     }
+
+    .innerOverlay {
+        padding-left: 16px;
+        padding-right: 16px;
+        flex-direction: column;
+        font-size: 20px;
+    }
+
+    .arrow {
+        width: 48px;
+    }
 }
 
 @media(max-width: 480px) {
     .impressum {
         font-size: xx-small;
+    }
+
+     .arrow {
+        width: 40px;
     }
 }
 
@@ -224,5 +227,13 @@ footer img {
 
     h2 {
         font-size: 16px;
+    }
+
+    .innerOverlay {
+        font-size: 16px;
+    }
+
+     .arrow {
+        width: 32px;
     }
 }
