--- a/style.css
+++ b/style.css
@@ -15,9 +15,11 @@
     padding: 0;
 }
 
-h3 {
+h2 {
     text-align: center;
     color: black;
+    padding-left: 24px;
+    padding-right: 24px;
 }
 
 html {
@@ -123,8 +125,9 @@ footer {
     display: flex;
     justify-content: center;
     align-items: center;
-    min-height: 100vh;
     width: 100%;
+    height: 100vh;
+    
     background-color: var(--backgroundColorOverlay);
 }
 
@@ -136,8 +139,9 @@ footer {
     max-width: var(--maxWidth);
     width: 100%;
     max-height: 100vh;
-    height: 100%;
+    height: auto; /**/
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     gap: 16px;
@@ -150,11 +154,23 @@ footer {
 .pictureInOverlay {
     max-width: 1200px;
     width: 100%;
+    max-height: 100vh; /**/
     height: auto;
     border-radius: 24px;
     border-style: solid;
     border-color: rgba(0, 0, 0, 0.484);
     cursor: pointer;
+}
+
+.navigate {
+    max-width: 1200px;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    padding-left: 24px;
+    padding-right: 24px;
 }
 
 .arrow {
@@ -212,7 +228,11 @@ footer img {
         font-size: xx-small;
     }
 
-     .arrow {
+    .innerOverlay {
+        font-size: 18px;
+    }
+
+    .arrow {
         width: 40px;
     }
 }
@@ -225,7 +245,7 @@ footer img {
         height: auto;
     }
 
-    h2 {
+    .innerOverlay {
         font-size: 16px;
     }
 
@@ -233,7 +253,7 @@ footer img {
         font-size: 16px;
     }
 
-     .arrow {
+    .arrow {
         width: 32px;
     }
 }
