--- a/style.css
+++ b/style.css
@@ -80,7 +80,7 @@ main {
     padding-bottom: 24px;
 }
 
-.picture {
+.picture { /*kleine Fotos */
     width: 180px;
     height: 180px;
     object-fit: cover;
@@ -126,8 +126,7 @@ footer {
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 100vh;
-    
+    height: 100vh;    
     background-color: var(--backgroundColorOverlay);
 }
 
@@ -138,8 +137,8 @@ footer {
 .innerOverlay {
     max-width: var(--maxWidth);
     width: 100%;
-    max-height: 100vh;
-    height: auto; /**/
+    /*max-height: 100vh;
+    /*height: auto; /**/
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -152,10 +151,10 @@ footer {
 }
 
 .pictureInOverlay {
-    max-width: 1200px;
+    max-width: 1000px;
     width: 100%;
-    max-height: 100vh; /**/
-    height: auto;
+   /* max-height: 100vh; /**/
+    max-height: auto;
     border-radius: 24px;
     border-style: solid;
     border-color: rgba(0, 0, 0, 0.484);
@@ -243,10 +242,6 @@ footer img {
     footer img {
         max-width: 100%;
         height: auto;
-    }
-
-    .innerOverlay {
-        font-size: 16px;
     }
 
     .innerOverlay {
