change img postiton

--- a/style.css
+++ b/style.css
@@ -126,6 +126,11 @@ footer {
     color: white;
 }
 
+.footerRemark a:hover {
+    text-decoration: underline;
+    color: darkred;
+}
+
 /* Klassen für Overlay */
 
 .overlayClass {
